--- a/BarbezDotEu.Sodoku.Generator/BarbezDotEu.Sodoku.Generator.csproj
+++ b/BarbezDotEu.Sodoku.Generator/BarbezDotEu.Sodoku.Generator.csproj
@@ -1,11 +1,27 @@
 <Project Sdk="Microsoft.NET.Sdk">
-
   <PropertyGroup>
     <TargetFramework>net5.0</TargetFramework>
+    <Authors>Hannes Barbez</Authors>
+    <Company>Hannes Barbez</Company>
+    <Title>BarbezDotEu.Sodoku.Generator</Title>
+    <Product>BarbezDotEu.Sodoku.Generator</Product>
+    <PackageId>BarbezDotEu.Sodoku.Generator</PackageId>
+    <Copyright>©2021 Hannes Barbez</Copyright>
+    <Version>1.0.0</Version>
+    <Description>This package generates sodoku games.</Description>
+    <PackageTags>basic;sodoku;generator;barbez</PackageTags>
+    <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
+    <PackageLicenseExpression>MIT</PackageLicenseExpression>
+    <PackageProjectUrl>https://barbez.eu</PackageProjectUrl>
+    <PackageOutputPath>./nupkg</PackageOutputPath>
+    <RepositoryUrl>https://github.com/hannesbarbez/BarbezDotEu.Sodoku</RepositoryUrl>
+    <RepositoryType>GIT</RepositoryType>
+    <PackageRequireLicenseAcceptance>True</PackageRequireLicenseAcceptance>
   </PropertyGroup>
-
+  <PropertyGroup>
+    <GenerateDocumentationFile>true</GenerateDocumentationFile>
+  </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="BarbezDotEu.Generic" Version="1.0.0" />
   </ItemGroup>
-
 </Project>
