--- a/BarbezDotEu.Sudoku.Generator/BarbezDotEu.Sudoku.Generator.csproj
+++ b/BarbezDotEu.Sudoku.Generator/BarbezDotEu.Sudoku.Generator.csproj
@@ -18,6 +18,7 @@
     <RepositoryType>GIT</RepositoryType>
     <PackageRequireLicenseAcceptance>True</PackageRequireLicenseAcceptance>
     <PackageIconUrl>https://i2.wp.com/barbez.eu/wp-content/uploads/2021/08/210821-Without-grid-Compressed.png?resize=64%2C64</PackageIconUrl>
+    <DebugSymbols>true</DebugSymbols>
   </PropertyGroup>
   <PropertyGroup>
     <GenerateDocumentationFile>true</GenerateDocumentationFile>
