Target NET Standard 2.0

--- a/BarbezDotEu.Sudoku.Generator/BarbezDotEu.Sudoku.Generator.csproj
+++ b/BarbezDotEu.Sudoku.Generator/BarbezDotEu.Sudoku.Generator.csproj
@@ -1,13 +1,13 @@
 <Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
-    <TargetFramework>net5.0</TargetFramework>
+    <TargetFramework>netstandard2.0</TargetFramework>
     <Authors>Hannes Barbez</Authors>
     <Company>Hannes Barbez</Company>
     <Title>BarbezDotEu.Sudoku.Generator</Title>
     <Product>BarbezDotEu.Sudoku.Generator</Product>
     <PackageId>BarbezDotEu.Sudoku.Generator</PackageId>
-    <Copyright>©2021 Hannes Barbez</Copyright>
-    <Version>1.0.0</Version>
+    <Copyright>©2022 Hannes Barbez</Copyright>
+    <Version>2.0.0</Version>
     <Description>This package generates Sudoku games.</Description>
     <PackageTags>basic;Sudoku;generator;barbez</PackageTags>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
@@ -24,6 +24,6 @@
     <GenerateDocumentationFile>true</GenerateDocumentationFile>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="BarbezDotEu.Generic" Version="1.0.0" />
+    <PackageReference Include="BarbezDotEu.Generic" Version="2.0.0" />
   </ItemGroup>
 </Project>
